# kyrsovaya_oop

./: README.md  pyproject.toml
main/: abstract_class.py  create_vacancy.py  headhunter.py  main.py  superjob.py
